2005-07-03  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc, shapes/shapeinf.h: Implemented weapon-dependent frame sequences
	  for attacks
	* effects.cc, effects.h: Slightly modified the way burst arrows are handled,
	  eliminated some hard-coded data about explosion sizes and moved the definition
	  of Get_explosion_shape out of Explosion_effect class.
2005-07-02  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapes/shapeinf.cc, etc: Added capabilities to read/save some previously
	  unknown data from ammo.dat and fixed minor bug on saving weapons.dat
	* effects.cc: Modified to use newly decoded ammo.dat info, modified Death
	  Vortex to more closely resemble original and implemented Energy Mist (the
	  latter two share the same code)
	* actors.cc: Modified how explosives work on hit; includes modifications for
	  Death Vortex and Energy Mist; now uses new ammo.dat info to determine if
	  missiles should be dropped on hit/miss.
	* content/sifixes (several): Prevent Serpent Bond from smuggling companions
	  to Dream World in SI

2005-07-01  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/fellowshipstaff.shp: new version by Crysta
	* data/bg/lightning_whip.shp: new art by Crysta

2005-07-01  Marzo Sette Torres Junior <marzojr@yahoo.com>
	* actors.cc: Fixed weapon frames, modified behaviour of explosives
	* effects.cc, effects.h: fixed explosives, and modified their
	  behaviour a bit
	* usecode/ucsched.cc: Fixed next_frame_max and npc_frame opcodes
	* content/sifixes/src/spells.uc: Fixed dumb bug in modified Vibrate
	  spell

2005-06-30  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* usecode/useval.cc: fix truncated strings when concatenating

2005-06-26    <jeff@mini.nerble.net>

	* mapedit/shapelst.cc,etc:  Rewrote shape-browser renderer so
	scrolling works correctly.

2005-06-21  Willem Jan Palenstijn <wjpalenstijn@users.sourceforge.net>
	* data/bg/spiked_shield.shp: fixed transparency, added back by Crysta
